--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_database: ^10.1.1
   shared_preferences: ^2.1.0
   firebase_messaging: ^14.4.1
+  permission_handler: ^10.2.0
 
 
 dev_dependencies:
