--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_messaging: ^14.4.1
   permission_handler: ^10.2.0
   liquid_pull_to_refresh: ^3.0.1
+  encrypt: ^5.0.1
 
 dev_dependencies:
   flutter_test:
