--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   encrypt: ^5.0.1
   flutter_native_image: ^0.0.6+1
+  url_launcher: ^6.1.11
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
