--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   firebase_storage: ^11.2.2
   clay_containers: ^0.3.2
   fluttertoast: ^8.2.2
+  liquid_swipe: ^3.1.0
+  flutter_bloc: ^8.1.3
 
 
 
