--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   fluttertoast: ^8.2.2
   liquid_swipe: ^3.1.0
   flutter_bloc: ^8.1.3
+  sqflite: ^2.2.8+4
+  utility: ^1.0.3
 
 
 
